# xmath

./: .gitignore  Cargo.toml  README.md
examples/: algebra.rs  common.rs  factorial.rs  func_analysis.rs  gprogression.rs  im_numbers.rs  imnumbers.rs  matrices.rs  parse.rs  parser.rs  theory_of_probability.rs  tools.rs
src/: algebra.rs  aprogression.rs  common.rs  func_analysis.rs  gprogression.rs  im_numbers.rs  lib.rs  math.rs  matrices.rs  parser.rs  parser_AST_scheme_v1.txt  parser_AST_scheme_v2.txt  parser_v1_rs  tests.rs  top.rs  utils.rs  vector_algebra.rs
src/im/: cast.rs  core.rs  im_matrices.rs  logic.rs  mod.rs  output.rs
src/im/ops/: add.rs  div.rs  mod.rs  mul.rs  pow.rs  powi.rs  sub.rs
src/im_numbers/: add.rs  cast.rs  core.rs  div.rs  im_expression.rs  im_number.rs  im_output.rs  logic.rs  mod.rs  mul.rs  output.rs  pow.rs  sub.rs
src/tests/: mod.rs  test_algebra.rs  test_aprogression.rs  test_common.rs  test_func_analysis.rs  test_gprogression.rs  test_imnumbers.rs  test_matrices.rs  test_top.rs  test_utils.rs  test_vector_algebra.rs
tests/: test_algebra.rs  test_aprogression.rs  test_common.rs  test_func_analysis.rs  test_gprogression.rs  test_matrices.rs  test_top.rs  test_utils.rs  test_vector_algebra.rs
