cargo-features = ["profile-rustflags"]

[package]
name = "xmath"
version = "0.5.0"
edition = "2021"
authors = ["hardglitch"]

[dev-dependencies]
criterion = "0"

[profile.dev]
rustflags = ["-Zprint-type-sizes"]

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
rustflags = ["-C", "target-cpu=native"]